MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/Lista_de_correo__c.object-meta.xml
<CustomObject>
    <label>Lista de correo</label>
    <nameField>
        <label>Nombre de Lista de correo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listas de correo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>