MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Comentario_adicional__c.field-meta.xml
<CustomField>
    <fullName>Comentario_adicional__c</fullName>
    <label>Comentario adicional</label>
    <length>10</length>
    <type>Text</type>
</CustomField>