MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Contacto1__c.field-meta.xml
<CustomField>
    <fullName>Contacto1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listas de correo (Contacto)</relationshipLabel>
    <relationshipName>Listas_de_correo2</relationshipName>
    <type>Lookup</type>
</CustomField>