MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Contacto2__c.field-meta.xml
<CustomField>
    <fullName>Contacto2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listas de correo (Contacto)</relationshipLabel>
    <relationshipName>Listas_de_correo3</relationshipName>
    <type>Lookup</type>
</CustomField>