MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Contacto3__c.field-meta.xml
<CustomField>
    <fullName>Contacto3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listas de correo (Contacto)</relationshipLabel>
    <relationshipName>Listas_de_correo4</relationshipName>
    <type>Lookup</type>
</CustomField>