MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/ContactoP__c.field-meta.xml
<CustomField>
    <fullName>ContactoP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Principal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Listas de correo</relationshipLabel>
    <relationshipName>Listas_de_correo1</relationshipName>
    <type>Lookup</type>
</CustomField>