MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_Electronico_C1__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_C1__c</fullName>
    <formula>Contacto1__r.Email</formula>
    <label>Correo Electronico Contacto No 1</label>
    <type>Text</type>
</CustomField>