MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_electronico_C2__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_C2__c</fullName>
    <formula>Contacto2__r.Email</formula>
    <label>Correo Electronico Contacto No 2</label>
    <type>Text</type>
</CustomField>