MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_electronico_C3__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_C3__c</fullName>
    <formula>Contacto3__r.Email</formula>
    <label>Correo Electronico Contacto No 3</label>
    <type>Text</type>
</CustomField>