MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_Electronico_Principal__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Principal__c</fullName>
    <formula>IF(
  NOT(ISBLANK(ContactoP__c)),
  ContactoP__r.Email,
  IF(
    NOT(ISBLANK(UsuarioP__c)),
    UsuarioP__r.Email,
    &quot;&quot;
  )
)</formula>
    <label>Correo Electronico Principal</label>
    <type>Text</type>
</CustomField>