MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_Electronico_U1__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_U1__c</fullName>
    <formula>Usuario1__r.Email</formula>
    <label>Correo Electronico Usuario No 1</label>
    <type>Text</type>
</CustomField>