MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_Electronico_U2__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_U2__c</fullName>
    <formula>Usuario2__r.Email</formula>
    <label>Correo Electronico Usuario No 2</label>
    <type>Text</type>
</CustomField>