MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Correo_Electronico_U3__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_U3__c</fullName>
    <formula>Usuario3__r.Email</formula>
    <label>Correo Electronico Usuario No 3</label>
    <type>Text</type>
</CustomField>