MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Descripcion_de_la_lista__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_la_lista__c</fullName>
    <label>Descripcion de la lista</label>
    <type>TextArea</type>
</CustomField>