MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Email_Adicional_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Adicional_1__c</fullName>
    <label>Email Adicional 1</label>
    <type>Email</type>
</CustomField>