MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Nombre_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listas de correo</relationshipLabel>
    <relationshipName>Listas_de_correo</relationshipName>
    <type>Lookup</type>
</CustomField>