MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Nombre_Destinatario_Principal__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Destinatario_Principal__c</fullName>
    <formula>IF (ISBLANK(ContactoP__c), ( UsuarioP__r.FirstName&amp;&quot; &quot;&amp; UsuarioP__r.LastName ) , IF( ISBLANK(UsuarioP__c),( ContactoP__r.FirstName&amp;&quot; &quot;&amp; ContactoP__r.LastName ) ,&quot;NO HAY DATO&quot;))</formula>
    <label>Nombre Destinatario Principal</label>
    <type>Text</type>
</CustomField>