MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicios</valueSetName>
    </valueSet>
</CustomField>