MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Tipo_de_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Operacion__c</fullName>
    <label>Tipo de Operacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facturacion</fullName>
            </value>
            <value>
                <fullName>Provisiones</fullName>
            </value>
            <value>
                <fullName>Cierre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>