MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Usuario1__c.field-meta.xml
<CustomField>
    <fullName>Usuario1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listas_de_correo2</relationshipName>
    <type>Lookup</type>
</CustomField>