MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Usuario2__c.field-meta.xml
<CustomField>
    <fullName>Usuario2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listas_de_correo3</relationshipName>
    <type>Lookup</type>
</CustomField>