MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Usuario3__c.field-meta.xml
<CustomField>
    <fullName>Usuario3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listas_de_correo4</relationshipName>
    <type>Lookup</type>
</CustomField>