MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/UsuarioP__c.field-meta.xml
<CustomField>
    <fullName>UsuarioP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Principal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Listas_de_correo1</relationshipName>
    <type>Lookup</type>
</CustomField>