MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
            <value>
                <fullName>V3</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>V5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>