MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/C1_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>C1_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en contacto</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contacto1__c)),
  ISBLANK(Correo_Electronico_C1__c)
)</errorConditionFormula>
    <errorMessage>El Contacto 1 tiene el email vacío.</errorMessage>
</ValidationRule>