MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/C2_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>C2_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en contacto</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contacto2__c)),
  ISBLANK(Correo_electronico_C2__c)
)</errorConditionFormula>
    <errorMessage>El Contacto 2 tiene el email vacío.</errorMessage>
</ValidationRule>