MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/C3_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>C3_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en contacto</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contacto3__c)),
  ISBLANK(Correo_electronico_C3__c)
)</errorConditionFormula>
    <errorMessage>El Contacto 3 tiene el email vacío.</errorMessage>
</ValidationRule>