MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/C4_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>C4_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en contacto</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contacto4__c)),
  ISBLANK(Correo_Electronico_C4__c)
)</errorConditionFormula>
    <errorMessage>El Contacto 4 tiene el email vacío.</errorMessage>
</ValidationRule>