MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/C5_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>C5_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en contacto</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Contacto5__c)),
  ISBLANK(Correo_electronico_C5__c)
)</errorConditionFormula>
    <errorMessage>El Contacto 5 tiene el email vacío.</errorMessage>
</ValidationRule>