MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/Contacto_Principal_00.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacto_Principal_00</fullName>
    <active>true</active>
    <description>Evita crear sin contacto o usuario</description>
    <errorConditionFormula>AND(
  ISBLANK(ContactoP__c),
  ISBLANK(UsuarioP__c)
)</errorConditionFormula>
    <errorMessage>Debes indicar un destinatario principal (Contacto o Usuario)</errorMessage>
</ValidationRule>