MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/Contacto_Principal_01.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacto_Principal_01</fullName>
    <active>true</active>
    <description>Evita agregar contacto y usuario al mismo tiempo</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(ContactoP__c)),
  NOT(ISBLANK(UsuarioP__c))
)</errorConditionFormula>
    <errorMessage>En Destinatario Principal selecciona Contacto o Usuario, no ambos</errorMessage>
</ValidationRule>