MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/Contacto_Principal_02.validationRule-meta.xml
<ValidationRule>
    <fullName>Contacto_Principal_02</fullName>
    <active>true</active>
    <description>Evita el contacto principal sin email</description>
    <errorConditionFormula>OR(
  /* Si el principal es Contacto y no tiene email */
  AND(
    NOT(ISBLANK(ContactoP__c)),
    ISBLANK(ContactoP__r.Email)
  ),
  /* Si el principal es Usuario y no tiene email */
  AND(
    NOT(ISBLANK(UsuarioP__c)),
    ISBLANK(UsuarioP__r.Email)
  )
)</errorConditionFormula>
    <errorMessage>El destinatario principal debe tener un Email. Actualiza el Contacto/Usuario para agregar su correo</errorMessage>
</ValidationRule>