MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/E0_Formato_Email_Adicional_1.validationRule-meta.xml
<ValidationRule>
    <fullName>E0_Formato_Email_Adicional_1</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Email_Adicional_1__c)),
  NOT(
    REGEX(
      TRIM(Email_Adicional_1__c),
      &quot;(?!\\.)[A-Za-z0-9._%+-]+@(?:(?!-)[A-Za-z0-9-]+(?&lt;!-)\\.)+[A-Za-z]{2,}$&quot;
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Email_Adicional_1__c</errorDisplayField>
    <errorMessage>Formato inválido en Email Adicional 1 (ej: usuario@dominio.com)</errorMessage>
</ValidationRule>