MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/U1_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>U1_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Usuario1__c)),
  ISBLANK(Correo_Electronico_U1__c)
)</errorConditionFormula>
    <errorMessage>El Usuario 1 tiene el email vacío.</errorMessage>
</ValidationRule>