MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/U2_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>U2_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Usuario2__c)),
  ISBLANK(Correo_Electronico_U2__c)
)</errorConditionFormula>
    <errorMessage>El Usuario 2 tiene el email vacío.</errorMessage>
</ValidationRule>