MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/U3_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>U3_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Usuario3__c)),
  ISBLANK(Correo_Electronico_U3__c)
)</errorConditionFormula>
    <errorMessage>El Usuario 3 tiene el email vacío.</errorMessage>
</ValidationRule>