MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/U4_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>U4_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Usuario4__c)),
  ISBLANK(Correo_Electronico_U4__c)
)</errorConditionFormula>
    <errorMessage>El Usuario 4 tiene el email vacío.</errorMessage>
</ValidationRule>