MigracionObjeto/force-app/main/default/objects/Lista_de_correo__c/validationRules/U5_Email_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>U5_Email_Requerido</fullName>
    <active>true</active>
    <description>Evita crear con email vacio en usuario</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Usuario5__c)),
  ISBLANK(Correo_Electronico_U5__c)
)</errorConditionFormula>
    <errorMessage>El Usuario 5 tiene el email vacío.</errorMessage>
</ValidationRule>